Bug 1689936: Move pending a11y content insertions into a temporary data structure before processing them. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D103977